Replace gross word

--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
             <li>Released <a href="http://3things.aviflax.com/">Three Things</a>, a client-side Web app (<a href="http://aviflax.com/post/two-practices-three-things/">backstory involving Jeff Atwood</a>)</li>
             <li>Presented <a href="https://www.youtube.com/watch?v=HGpDHBzErkg">The impedance mismatch of Web Microframeworks</a> at PyGrunn 2014 (hosted by Paylogic, a subsidiary of SFX)</li>
             <li>Started collecting <a href="https://gist.github.com/aviflax/7f453a41a06a200a2f5d">resources for learning stream processing</a></li>
-            <li>Ideated <a href="https://github.com/aviflax/github-digests">GitHub Digests</a>, a system to aggregate GitHub notifications into daily email digests</li>
+            <li>Designed <a href="https://github.com/aviflax/github-digests">GitHub Digests</a>, a system to aggregate GitHub notifications into daily email digests</li>
           </ul>
         </li>
         <li>2013:
