Update “last updated” date in footer
:roll_eyes:

--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
 </section>
 
 <footer>
-  <p>Last updated on 10 October 2019.</p>
+  <p>last updated: 2020-02-17 • <a href="https://github.com/aviflax/resume">full change history</a></p>
 </footer>
 
 </body>
