Update Twitter URL

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
     <summary><h2>Around the Web</h2></summary>
     <ul>
         <li><a href="http://aviflax.com/">Blog</a></li>
-        <li><a href="https://twitter.com/flaximus_prime">Twitter</a></li>
+        <li><a href="https://twitter.com/flaximus">Twitter</a></li>
         <li><a href="https://pinboard.in/u:aviflax">Bookmarks</a></li>
         <li><a href="https://www.instapaper.com/p/avi">Instapaper</a></li>
         <li><a href="https://stackoverflow.com/users/7012/avi-flax">Stack Overflow</a></li>
