Add Latacora to experience

--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@
 <details id="objective" open="true">
   <summary><h2>Objective</h2></summary>
   
-  <p>A position designing<a href="#footnote-1" class="footnote_reference"><sup>1</sup></a>, building, documenting, operating, and maintaining software systems in close collaboration with my team and stakeholders.</p>
+  <p>A position designing<a href="#footnote-1" class="footnote_reference"><sup>1</sup></a>,
+     building, documenting, operating, and maintaining software systems in close collaboration with
+     my team and stakeholders.</p>
 </details>
 
 <!--
@@ -197,7 +199,33 @@
 -->
 
 <details id="prior-experience" class="experience">
-    <summary><h2><!--Prior -->Experience</h2></summary>
+    <summary><h2>Experience</h2></summary>
+
+    <section id="latacora">
+      <h3>
+        <span class="time-frame">2022–2023</span>
+        Staff Software Engineer at <a href="https://www.latacora.com">Latacora</a>
+      </h3>
+      <ul class="activities">
+        <li>Designed and implemented:
+            <ul>
+                <li>A system that manages access to many AWS accounts via AWS SSO and
+                    <a href="https://www.pulumi.com/">Pulumi</a>
+                <li>A system for deploying multiple tools to many AWS accounts via Pulumi
+                <li>A custom database for crucial business data
+                <li>CLI tools for exporting and importing that custom business data to/from other
+                    tools and systems such as <a href="https://fibery.io">Fibery</a> and JIRA
+            </ul>
+        <li>Technologies, techniques, and tools employed:
+          <ul>
+            <li>AWS (ECS, IAM, Fargate, S3, Secrets Manager, SSO)
+            <li>Clojure
+            <li>GitHub Actions
+            <li>Pulumi
+          </ul>
+        </li>
+      </ul>
+    </section>
 
     <section id="modern-energy">
       <h3>
@@ -539,8 +567,7 @@
 <details id="around-the-web">
     <summary><h2>Around the Web</h2></summary>
     <ul>
-        <li><a href="http://aviflax.com/">Blog</a></li>
-        <li><a href="https://twitter.com/flaximus">Twitter</a></li>
+        <li><a href="https://flaximus.net/@avi@flaximus.net/">Microblog</a></li>
         <li><a href="https://pinboard.in/u:aviflax">Bookmarks</a></li>
         <li><a href="https://www.instapaper.com/p/avi">Instapaper</a></li>
         <li><a href="https://stackoverflow.com/users/7012/avi-flax">Stack Overflow</a></li>
@@ -551,7 +578,6 @@
 <details id="hobbies">
     <summary><h2>Hobbies</h2></summary>
     <ul>
-        <li><a href="http://www.flickr.com/photos/avi4now/7819823912/lightbox/">Auto racing (autox)</a></li>
         <li>Cycling</li>
         <li>Hiking</li>
         <li><a href="http://www.goodreads.com/user/show/2772290-avi-flax">Reading</a></li>
@@ -563,7 +589,7 @@
     <h2>Contact Me</h2>
     <p>Thanks for scrolling all the way to the bottom of my résumé! I appreciate your interest. At this point, you might want to get in touch. Please do!</p>
     <ul class="contact">
-        <li><a href="mailto:avi@aviflax.com?subject=Interview%20request">avi@aviflax.com</a></li>
+        <li><a href="mailto:avi@aviflax.com?subject=Let’s%20Go">avi@aviflax.com</a></li>
         <li>I’m based in <a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a>. I prefer to work as part of a mostly or fully distributed team, but I’d be happy to work from an office in the NYC area 1–3 days per week, depending on distance.</li>
     </ul>
 </section>
@@ -586,7 +612,7 @@
 </section>
 
 <footer>
-  <p>last updated: 2021-12-12 • <a href="https://github.com/aviflax/resume">full change history</a></p>
+  <p>last updated: 2023-03-28 • <a href="https://github.com/aviflax/resume">full change history</a></p>
 </footer>
 
 </body>
