add some skills

--- a/index.html
+++ b/index.html
@@ -438,8 +438,10 @@
         <li>Data architecture &amp; data engineering</li>
         <li>Documentation</li>
         <li><a href="https://www.writethedocs.org/guide/docs-as-code/">Docs as Code</a></li>
+        <li>Infrastructure as Code</li>
         <li>Information architecture</li>
         <li>Optimizing developer productivity via automation and documentation</li>
+        <li>Continuous Delivery (CD) pipelines and automation</li>
         <li>Team/organizational leadership</li>
         <li>Assessing and improving organizational effectiveness</li>
         <li>Organizational architecture</li>
