--- a/index.html
+++ b/index.html
@@ -596,12 +596,10 @@
     </ul>
 </section>
 
-<!-- I don’t have time to update this today; I’ll do so next week.
 <section id="pdf-version">
   <h2>PDF Version</h2>
-  <p>If you’d like to e-mail this résumé, or add it to your applicant tracking system, you’re welcome to use <a href="Avi Flax’s Resume (CV).pdf">the PDF version</a>.</p>
+  <p>If you’d like to e-mail this résumé, or add it to your applicant tracking system, you’re welcome to use <a href="Avi Flax’s Résumé 2023-03-28.pdf">the PDF version</a>.</p>
 </section>
--->
 
 <section id="footnotes">
   <h2>Notes</h2>
