--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <!-- Thanks for checking out my HTML and CSS skillz! Clearly you should totally hire me. What are you waiting for? avi@aviflax.com -->
+    
+    <!-- Thanks for checking out my HTML and CSS skillz! This is all hand-rolled, fwiw. -->
+    
     <title>Avi Flax » Résumé</title>
     <style>
         @font-face {
@@ -591,7 +593,7 @@
     <h2>Contact Me</h2>
     <p>Thanks for scrolling all the way to the bottom of my résumé! I appreciate your interest. At this point, you might want to get in touch. Please do!</p>
     <ul class="contact">
-        <li><a href="mailto:avi@aviflax.com?subject=Let’s%20Go">avi@aviflax.com</a></li>
+        <li><a href="mailto:avi@flaximus.net?subject=Let’s%20Go">avi@flaximus.net</a></li>
         <li>I’m based in <a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a>. I prefer to work as part of a mostly or fully distributed team, but I’d be happy to work from an office in the NYC area 1–3 days per week, depending on distance.</li>
     </ul>
 </section>
