--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
 
 <section id="pdf-version">
   <h2>PDF Version</h2>
-  <p>If you’d like to e-mail this résumé, or add it to your applicant tracking system, you’re welcome to use <a href="Avi%20Flax%E2%80%99s%20Re%CC%81sume%CC%81%20Q2-2023.pdf">the PDF version</a>.</p>
+  <p>If you’d like to e-mail this résumé, or add it to your applicant tracking system, you’re welcome to use <a href="Avi%20Flax’s%20Résumé%20Q2-2023.pdf">the PDF version</a>.</p>
 </section>
 
 <section id="footnotes">
