wholly new tagline and objective

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <!-- Thanks for checking out my HTML and CSS skillz! This is all hand-rolled, fwiw. -->
     
-    <title>Avi Flax » Résumé</title>
+    <title>Avi Flax » Experienced full-cycle software engineer</title>
     <style>
         @font-face {
             font-family: "Charter";
@@ -178,18 +178,44 @@
 
 <header id="top">
     <h1 id="name">Avi Flax</h1>
-    <h2 id="tagline">Software Developer</h2>
-    <!-- Commenting this out for now because it’s redundant with the objective
-    <p id="what-i-do">I design<a href="#footnote-1" class="footnote_reference"><sup>1</sup></a>, build, document, operate, and maintain software systems.</p>
-    -->
+    <h2 id="tagline">Experienced full-cycle software engineer</h2>
 </header>
 
 <details id="objective" open="true">
+  <!-- TODO: maybe replace with “Profile” -->
   <summary><h2>Objective</h2></summary>
   
-  <p>A position designing<a href="#footnote-1" class="footnote_reference"><sup>1</sup></a>,
-     building, documenting, operating, and maintaining software systems in close collaboration with
-     my team and stakeholders.</p>
+  <h3>What kind of work I want to do</h3>
+
+  <ul>
+    <li>Hands-on
+    <li>Full-cycle (design<a href="#footnote-1" class="footnote_reference">1</a>,
+        testing, implementation, documentation, deployment, operations, maintenance, etc)
+    <li>Highly collaborative (with co-workers, users, customers, etc)
+    <li>Leading by example
+    <li>Mentoring and supporting co-workers
+  </ul>
+
+  <h3>On what kind of software</h3>
+  <ul>
+    <li>Anything with a <b>direct positive impact</b> on its users and the organization
+  </ul>
+
+  <h3>At what kind of org</h3>
+  <ul>
+    <li>Mission-driven
+    <li>People-first
+    <li>Committed to diversity &amp; inclusion
+    <li>Enshrines kindness as cardinal
+    <li>A shared understanding that candid and timely critisicm/feedback is a gift
+    <li>Shares knowlege via artifacts (documents, pages, tickets, etc) rather than conversations
+        (email, chat, verbal)
+    <li>Invests in stability, sustainability, reliability, etc.
+    <li>Regularly reassesses and revises processes and policies
+    <li>Uses tasteful tools (e.g. <a href="https://linear.app">Linear</a> rather than
+        <a href="https://www.atlassian.com/software/jira">Jira</a>;
+        <a href="https://discourse.org">Discourse</a> rather than <a href="https://slack.com">Slack</a>)
+  </ul>
 </details>
 
 <!--
@@ -593,8 +619,8 @@
     <h2>Contact Me</h2>
     <p>Thanks for scrolling all the way to the bottom of my résumé! I appreciate your interest. At this point, you might want to get in touch. Please do!</p>
     <ul class="contact">
-        <li><a href="mailto:avi@flaximus.net?subject=Let’s%20Go">avi@flaximus.net</a></li>
-        <li>I’m based in <a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a>. I prefer to work as part of a mostly or fully distributed team, but I’d be happy to work from an office in the NYC area 1–3 days per week, depending on distance.</li>
+        <li><a href="mailto:work@aviflax.com?subject=Let’s%20Go">work@aviflax.com</a></li>
+        <li>I’m based in <a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a>. I prefer to work as part of a mostly or fully distributed team, but I’m open to working from an office in the NYC area 1–3 days per week, depending on distance.</li>
     </ul>
 </section>
 
@@ -614,7 +640,7 @@
 </section>
 
 <footer>
-  <p>last updated: 2023-03-29 • <a href="https://github.com/aviflax/resume">full change history</a></p>
+  <p>last updated: 2023-10-18 • <a href="https://github.com/aviflax/resume">full change history</a></p>
 </footer>
 
 </body>
