pretty substantial style (presentation) overhaul

--- a/index.html
+++ b/index.html
@@ -8,32 +8,55 @@
     
     <title>Avi Flax » Experienced full-cycle software engineer</title>
     <style>
+        /* Apparently Android browsers only got support for woff2 in September 2023. */
+        /* The values in local() are “PostScript names” that I retrieved via Font Book on MacOS. */
         @font-face {
-            font-family: "Charter";
-            src: url(fonts/charter/charter_regular.woff);
+            font-family: "Fira Code";
+            font-weight: "bold";
+            src:
+              local("FiraCodeRoman-Bold"),
+              url("fonts/Fira Code/FiraCode-Bold.woff2") format("woff2"),
+              url("fonts/Fira Code/FiraCode-Bold.woff") format("woff");
         }
 
         @font-face {
-            font-family: "Charter";
-            src: url(fonts/charter/charter_bold.woff);
+            font-family: "Fira Sans";
+            font-weight: 500;
+            src:
+              local("FiraSans-Medium"),
+              url("fonts/Fira Sans/FiraSans-Medium.woff2") format(woff2),
+              url("fonts/Fira Sans/FiraSans-Medium.woff") format(woff);
+        }
+
+        @font-face {
+            font-family: "Fira Sans";
+            font-weight: normal;
+            src:
+              local("FiraSans-Regular"),
+              url("fonts/Fira Sans/FiraSans-Regular.woff2") format(woff2),
+              url("fonts/Fira Sans/FiraSans-Regular.woff") format(woff);
+        }
+
+        @font-face {
+            font-family: "Fira Sans";
             font-weight: bold;
+            src:
+              local("FiraSans-Bold"),
+              url("fonts/Fira Sans/FiraSans-Bold.woff2") format(woff2),
+              url("fonts/Fira Sans/FiraSans-Bold.woff") format(woff);
         }
 
         @font-face {
-            font-family: "Charter";
-            src: url(fonts/charter/charter_italic.woff);
+            font-family: "Fira Sans";
             font-style: italic;
-        }
-
-        @font-face {
-            font-family: "Charter";
-            src: url(fonts/charter/charter_bold_italic.woff);
-            font-weight: bold;
-            font-style: italic;
+            src:
+              local("FiraSans-Italic"),
+              url("fonts/Fira Sans/FiraSans-Italic.woff2") format(woff2),
+              url("fonts/Fira Sans/FiraSans-Italic.woff") format(woff);
         }
 
         html, body {
-            font-family: "Charter", "Palatino", "Helvetica Neue", "Helvetica";
+            font-family: "Fira Sans";
             font-size: 15pt;
             line-height: 1.2;
         }
@@ -56,16 +79,6 @@
           margin-bottom: 0.75em;
         }
 
-        #name {
-          font-size: 3em;
-          margin: 0.5em 0 0.25em 0;
-        }
-
-        #tagline {
-          font-weight: normal;
-          font-size: 160%
-        }
-
         i > i {
           font-style: normal;
         }
@@ -83,17 +96,44 @@
         }
 
         #additional-skills-technologies > ul, #key-technologies > ul, #around-the-web > ul {
-            -column-count: 2;
-            -column-gap: 10px;
-            -webkit-column-count: 2;
-            -webkit-column-gap: 10px;
-            -moz-column-count: 2;
-            -moz-column-gap: 10px;
-            list-style-position: inside;
+            columns: 2;
         }
 
         #additional-skills-technologies > ul > li {
             margin-left: 0.1em;
+        }
+
+        h1 {
+            font-family: "Fira Code";
+            font-weight: bold;
+        }
+
+        h2, h3, h4, h5 {
+            font-weight: 500;
+            break: avoid-page;
+        }
+
+        body > details > summary::marker, body > details> summary::-webkit-details-marker {
+          /* This is the same as the computed size of the h2 elems I have under the summary, and
+             this helps keep the marker aligned vertically with the text in the h2. It results in
+             the marker being kinda huge, but I can live with that. Anyway it’s better than the
+             default, which is a little too small. */
+          font-size: 30px;
+        }
+
+        details, section {
+          break-inside: avoid;
+          page-break-inside: avoid;
+        }
+
+        #name {
+          font-size: 3em;
+          margin: 0.5em 0 0.25em 0;
+        }
+
+        #tagline {
+          font-weight: 500; /* 500=medium (400=normal; 700=bold) */
+          font-size: 160%
         }
 
         h2, h3, h4, h5, h6, details {
@@ -161,8 +201,9 @@
 
         /* I have a bit of an idea what I’m doing. */
         @media print {
-          body {
-            font-size: 12pt;
+          html, body {
+            /* The !important is an attempt to address the font size being huge in Firefox. */
+            font-size: 12pt !important; 
             margin: 0 auto;
             padding-left: 5%;
             padding-right: 5%;
@@ -347,7 +388,7 @@
     </section>
 
     <section id="timehop">
-        <h3>2015: Timehop</h3>
+        <h3><span class="time-frame">2015</span> Timehop</h3>
         <ul>
             <li>Refactored a critical and complex system into a loosely-coupled stream-based system using Kinesis and Go (<a href="https://speakerdeck.com/aviflax/stream-data-processing-with-kinesis-and-go-at-timehop">slides</a>)</li>
             <li>Designed and implemented sophisticated integration with Twilio for SMS-based signup</li>
@@ -356,14 +397,14 @@
     </section>
 
     <section id="thinkful">
-        <h3>2014: Thinkful</h3>
+        <h3><span class="time-frame">2014</span> Thinkful</h3>
         <ul>
             <li>Designed and implemented an event-driven system to automate Stripe subscription management</li>
         </ul>
     </section>
 
     <section id="sfx">
-      <h3>2013–2014: SFX Entertainment</h3>
+      <h3><span class="time-frame">2013–2014</span> SFX Entertainment</h3>
       <ul>
         <li>SFX acquired Arc90 in 2013 to be its internal app design and development group</li>
         <li>I initially adopted the title CTO, then recruited <a href="https://alexandergrosse.com/">someone amazing</a> to replace me and shifted to <i>Chief Sofware Architect</i></li>
@@ -374,7 +415,7 @@
     </section>
 
     <section id="arc90">
-        <h3>2005–2013: Arc90</h3>
+        <h3><span class="time-frame">2005–2013</span> Arc90</h3>
         <ul>
             <li>Arc90 was a Web application design &amp; development consultancy; it was acquired by SFX Entertainment in 2013</li>
             <li>Wore many hats: developer, architect, team leader, partner, director</li>
@@ -394,14 +435,14 @@
     </section>
 
     <section id="adp">
-        <h3>2001–2004: ADP</h3>
+        <h3><span class="time-frame">2001–2004</span> ADP</h3>
         <ul>
             <li>Refactored, enhanced, and maintained a sophisticated application for producing custom financial documents for on-demand printing</li>
         </ul>
     </section>
 
     <section id="register.com">
-        <h3>2001: Register.com</h3>
+        <h3><span class="time-frame">2001</span> Register.com</h3>
         <ul>
             <li>Team lead position for large high-traffic auction site</li>
             <li>Responsibilities included designing, implementing, and maintaining features; and reengineering site technology and architecture
@@ -410,50 +451,51 @@
     </section>
 
     <section id="rewardsplus">
-        <h3>2000: RewardsPlus</h3>
+        <h3><span class="time-frame">2000</span> RewardsPlus</h3>
         <ul>
             <li>Maintained and enhanced a large-scale online employee benefits enrollment system for diverse clients with diverse needs</li>
         </ul>
     </section>
 
     <section id="wip">
-        <h3>1998–2000: Words In Progress</h3>
+        <h3><span class="time-frame">1998–2000</span> Words In Progress</h3>
         <ul>
             <li>Developed requirements and specifications for high traffic websites directly with clients; crafted application architecture and database design</li>
         </ul>
     </section>
 
     <section id="ics">
-        <h3>1998: Ideal Computer Strategies</h3>
+        <h3><span class="time-frame">1998</span> Ideal Computer Strategies</h3>
         <ul>
             <li>Worked with teams of designers, coders, and project managers to concurrently develop and deploy client websites with basic dynamic features</li>
         </ul>
     </section>
 
     <section id="pcc">
-        <h3>1997–1998: PCC Internet Design</h3>
+        <h3><span class="time-frame">1997–1998</span> PCC Internet Design</h3>
         <ul>
             <li>Founded and managed a small web design shop in Pikesville, MD providing full-service web design and development to small companies in the Baltimore area</li>
         </ul>
     </section>
 </details>
 
-<section id="statements">
-    <details>
-      <summary><h2>Values</h2></summary>
-      <h3>I believe that:</h3>
-      <ul class="statements">
-        <li>diversity and inclusion are crucial <i>and</i> create rich, healthy, sustainable, productive organizations.</li>
-        <li><a href="https://en.wikipedia.org/wiki/Don%27t_repeat_yourself">DRY</a> and <a href="https://en.wikipedia.org/wiki/Rule_of_three_(computer_programming)">the Rule of Three</a> apply to docs just as much as code.</li>
-        <li>people can only do great work if they are healthy, growing, supported, and respected.</li>
-        <li>all great processes have one thing in common: they are regularly reviewed and refined.</li>
-        <li>the most important aspect of any technology is its potential to solve problems.</li>
-        <li>technology is a phenomenally powerful tool that we humans have at our disposal to solve problems — if we so choose.</li>
-        <li>we do some of our best thinking in collaboration with others.</li>
-        <li>institutional/communal memory is critical to building sustainable organizations.</li>
-      </ul>
-    </details>
-</section>
+
+<!-- TODO: revisit this. It’s… not great. -->
+<details>
+  <summary><h2>Values</h2></summary>
+  <h3>I believe that:</h3>
+  <ul class="statements">
+    <li>diversity and inclusion are crucial <i>and</i> create rich, healthy, sustainable, productive organizations.</li>
+    <li><a href="https://en.wikipedia.org/wiki/Don%27t_repeat_yourself">DRY</a> and <a href="https://en.wikipedia.org/wiki/Rule_of_three_(computer_programming)">the Rule of Three</a> apply to docs just as much as code.</li>
+    <li>people can only do great work if they are healthy, growing, supported, and respected.</li>
+    <li>all great processes have one thing in common: they are regularly reviewed and refined.</li>
+    <li>the most important aspect of any technology is its potential to solve problems.</li>
+    <li>technology is a phenomenally powerful tool that we humans have at our disposal to solve problems — if we so choose.</li>
+    <li>we do some of our best thinking in collaboration with others.</li>
+    <li>institutional/communal memory is critical to building sustainable organizations.</li>
+  </ul>
+</details>
+
 
 <details id="key-skills">
     <summary><h2>Key Skills</h2></summary>
